--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "wp-org-themes",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "homepage": "https://maheshwaghmare.github.io/reactjs-wp-org-themes",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
