--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "homepage": "https://maheshwaghmare.github.io/reactjs-wp-org-themes",
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
+    "@material/card": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "material": "^0.4.3",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
